# GraderServer

./: .gitignore  .gitmodules  README.md  requirements.txt
client/: client.py
common/: types.py
server/: __init__.py  app.py  run.py  setup.py
server/challenges/: mastermind.py
server/server/: __init__.py
server/server/challenges/: mastermind.py
skeletons/: config.json
skeletons/archive/JavaSkeleton/: Makefile  Tester.sh
skeletons/archive/JavaSkeleton/src/game/: Game.java
skeletons/archive/JavaSkeleton/src/json/: Command.java  InvalidColorException.java  MastermindGuessResponse.java  Message.java  PegColor.java  ReportNewGame.java  RequestMastermindGuess.java
skeletons/archive/JavaSkeleton/src/main/: Main.java
skeletons/archive/PythonSkeleton2.7/: GameClasses.py  Tester.sh  main.py
skeletons/cpp/: .clang-format  CMakeLists.txt  CmakeLists.txt
skeletons/cpp/opt/: CMakeLists.txt
skeletons/cpp/src/: CMakeLists.txt  main.cpp  main_old.cpp  utilities.h
skeletons/cpp/src/commands/: mastermind-commands.h
skeletons/cpp/src/game/: CMakeLists.txt  game.cpp  game.h
skeletons/java/src/game/client/: Client.java  ConfigFileParser.java  Game.java  GameLogging.java  Main.java  Mastermind.java
skeletons/python/: client.py
